<resources>
    <string name="app_name">USay</string>

    <string name="tou_tiao">头条</string>
    <string name="fen_lei">分类</string>
    <string name="xian_du">闲读</string>
    <string name="she_qu">社区</string>
    <string name="ge_ren">个人</string>

    <string name="toolbar_title">博客头条</string>
    <string name="content_view_person">浏览量</string>
    <string name="share">分享</string>
    <string name="web_open">浏览器中打开</string>
    <string name="copy_link">复制链接</string>
    <string name="fen_lei_title">分类浏览</string>

    <string name="shou_cang">我的收藏</string>
    <string name="ti_wen">我的帖子</string>
    <string name="fan_kui">问题反馈</string>
    <string name="zhu_ye">项目主页</string>
    <string name="you_xi">游戏</string>
    <string name="gou_wu">购物</string>
    <string name="guan_yu">关于</string>

    <string name="login_exit">退出登录</string>
    <string name="no_login">登录/注册</string>
    <string name="no_login_desc">一句话秀出个性</string>
    <string name="phone_hint">手机号</string>
    <string name="password">密码</string>
    <string name="user_hint">用户名</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register_account">注册账号</string>
    <string name="input_conform">输入验证码</string>
    <string name="send_conform">发送验证码</string>
    <string name="new_password">新密码</string>
    <string name="reset_compile">完成</string>

    <string name="head">头像</string>
    <string name="jianjie">简介</string>
    <string name="reset_password">重置密码</string>
    <string name="person_info">个人资料</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="edit_shequ">编辑</string>

    <string name="createpost_content">提出问题或者吐槽一下</string>
    <string name="createpost_send">发表</string>

    <string name="action_settings">Settings</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="say_something">说点什么吧</string>
    <string name="post_detail_send">发送</string>
    <string name="comment_no">暂时没有评论,快去评论吧!</string>
    <string name="likes_no">暂时没有人赞哦!</string>
    <string name="adding">正在加载......</string>

    <string name="feed">请输入遇到的问题或建议......</string>
    <string name="about_version">USay-v 1.0</string>

    <string name="about_js">介绍与帮助</string>
    <string name="help_str">
        一款基于Android传统的MVC技术的个人APP，后端基于Bmob服务器， 包含四个主要页面：\n\n头条页面：数据来源CSDN，Jsoup爬取博客数据；\n分类页面：查看分类资讯；\n社区页面：后端采用Bmob存储数据；\n个人页面：实现一个完整的个人用户系统功能。\n\n代码已开源：https://github.com/struggledhard/USay
    </string>
    <string name="about_openlib">使用的开源库</string>
    <string name="used_libs_str">
        #开源库#
        \n\nRxJava：一个在 Java VM 上使用可观测的序列来组成异步的、基于事件的程序的库
        \n\nRxAndroid：RxJava的辅助库
        \n\nButterKnife：最好用的View注解框架
        \n\nGlide：Google推荐的图片加载库，专注于流畅的滚动
        \n\nGson：Google 提供的用来在 Java 对象和 JSON 数据之间进行映射的 Java 类库
        \n\nJsoup：java爬虫开源库
        \n\nOkHttp：网络请求框架
        \n\nBmob-sdk：Bmob后端云集成sdk
    </string>
</resources>
