<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
    android:background="@drawable/bg02">
    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@mipmap/phone"
        android:layout_gravity="center_vertical"
        android:hint="@string/phone_hint"
        android:textColorHint="#d2d2d2"
        android:textColor="#ffffff"
        android:inputType="phone"
        android:background="@drawable/shape_item_bg"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20dp"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@mipmap/password"
        android:layout_gravity="center_vertical"
        android:hint="@string/password"
        android:textColorHint="#d2d2d2"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:background="@drawable/shape_item_bg"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"
            android:textColor="#d8d7d7"/>
        <Button
            android:id="@+id/btn_register_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:textColor="#ffffff"
            android:background="@android:color/transparent"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/select_btn_bg"
        android:textColor="#ffffff"/>
</LinearLayout>