<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:background="@drawable/bg02">
    <android.support.v7.widget.Toolbar
        android:id="@+id/reset_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/reset_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/phone_hint"
        android:textColorHint="#d2d2d2"
        android:background="@drawable/shape_resetitem_bg"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="56dp"
        android:inputType="phone"
        android:textColor="#ffffff"
        android:paddingStart="16dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/shape_resetitem_bg"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/reset_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/input_conform"
            android:textColorHint="#d2d2d2"
            android:background="@null"
            android:textColor="#ffffff"
            android:paddingStart="16dp"/>
        <Button
            android:id="@+id/confirm_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_conform"
            android:textColor="#362c9f"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:background="#00ffffff"
            android:layout_marginEnd="2dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/shape_resetitem_bg"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/new_paw"
            android:layout_width="268dp"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:textColorHint="#d2d2d2"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:paddingStart="16dp"/>
        <ImageButton
            android:id="@+id/reset_onpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/onpassword"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/confirm_compile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_compile"/>
</LinearLayout>