<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:background="@drawable/bg02">
    <android.support.v7.widget.Toolbar
        android:id="@+id/update_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/update_old_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/input_old_password"
        android:textColorHint="#d2d2d2"
        android:background="@drawable/shape_resetitem_bg"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="56dp"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:paddingStart="16dp"/>
    <EditText
        android:id="@+id/update_new_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/input_new_password"
        android:textColorHint="#d2d2d2"
        android:background="@drawable/shape_resetitem_bg"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:paddingStart="16dp"/>
    <Button
        android:id="@+id/update_compile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_compile"/>
</LinearLayout>