<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:background="@drawable/bg02">
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent">
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@mipmap/phone"
        android:layout_gravity="center_vertical"
        android:hint="@string/phone_hint"
        android:textColorHint="#d2d2d2"
        android:textColor="#ffffff"
        android:inputType="phone"
        android:background="@drawable/shape_item_bg"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:paddingStart="20dp"/>
    <EditText
        android:id="@+id/register_user"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@mipmap/user"
        android:layout_gravity="center_vertical"
        android:hint="@string/user_hint"
        android:textColorHint="#d2d2d2"
        android:textColor="#ffffff"
        android:background="@drawable/shape_item_bg"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"/>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@mipmap/password"
        android:drawableEnd="@mipmap/onpassword"
        android:layout_gravity="center_vertical"
        android:hint="@string/password"
        android:textColorHint="#d2d2d2"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:background="@drawable/shape_item_bg"
        android:drawablePadding="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/select_btn_bg"
        android:textColor="#ffffff"/>
</LinearLayout>