<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/person_setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff"
        android:elevation="2dp">
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/setting_head"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/head"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:textColor="#000000"/>
                <ImageView
                    android:id="@+id/head_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/imgNewsItem"/>
            <RelativeLayout
                android:id="@+id/setting_name"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_hint"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/imgNewsItem"/>
            <RelativeLayout
                android:id="@+id/setting_phone"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_hint"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/person_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/imgNewsItem"/>
            <RelativeLayout
                android:id="@+id/setting_desc"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jianjie"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/jian_jie"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:maxLines="1"
                    android:ellipsize="end"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/password_reset"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/reset_password"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"/>
    </android.support.v7.widget.CardView>
</LinearLayout>